--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,9 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 
         <!-- Google fonts will go here -->
-
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
 
         <!-- Custom CSS dummy link for now -->
         <link rel="stylesheet" href="{% static 'css/base.css' %}">
@@ -49,8 +51,8 @@
 
     <!-- Header Section -->
     <!-- Stick the logo, the navigation links, the searchbar and the bag-link here -->
-    <header class="container-fluid fixed-top">
-        <div class="row">
+    <header class="container-fluid fixed-top ">
+        <div id="topnav" class="row bg-orange pt-lg-2 d-none d-lg-flex">
             
             <!-- Header Div 1 - Logo -->
             <div class="col-12 col-lg-4 my-auto py-lg-0 text-center text-lg-left">
@@ -69,7 +71,7 @@
                         <div class="input-group-append">
                             <button class="form-control btn btn-black border border-black rounded-0" type="submit">
                                 <span class="icon">
-                                    <i class="fas fa-search"></i>
+                                    <i id="search-icon" class="fas fa-search"></i>
                                 </span>
                             </button>
                         </div>
@@ -121,7 +123,7 @@
                         </a>
                     </li>
                 </ul>
-                
+
             </div>
 
         </div>
