--- a/templates/base.html
+++ b/templates/base.html
@@ -71,7 +71,7 @@
                         <div class="input-group-append">
                             <button class="form-control btn btn-black border border-black rounded-0" type="submit">
                                 <span class="icon">
-                                    <i id="search-icon" class="fas fa-search"></i>
+                                    <i class="fas fa-search search-icon"></i>
                                 </span>
                             </button>
                         </div>
@@ -126,6 +126,20 @@
 
             </div>
 
+        </div>
+        <div class="row" id="secondary-navbar">
+            <nav class="navbar navbar-expand-lg navbar-light w-100">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                {% include 'includes/mobile-top-header.html' %}
+                {% include 'includes/main-nav.html' %}
+            </nav>
+        </div>
+        <div id="delivery-banner" class="row text-center">
+            <div class="col bg-orange text-dark-blue">
+                <h4 class="logo-font my-1">Free delivery on orders over ${{ free_shipping_threshold }}!</h4>                
+            </div>            
         </div>
 
     </header>
