--- a/books/templates/books/books.html
+++ b/books/templates/books/books.html
@@ -4,20 +4,85 @@
 {% block page_header %}
     <div class="container header-container">
         <div class="row">
-            <div class="col">
-                
+            <div class="col"></div>
+        </div>
+    </div>
+{% endblock %}
+
+{% block content %}
+    <div class="overlay"></div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col text-center mt-3">
+                <h2 class="logo-font  text-orange">Books</h2>
+                <hr class="w-50 mb-2 page-divider">
+            </div>
+        </div>
+        <div class="row">
+            <div class="product-container col-10 offset-1">
+                <div class="row mt-1 mb-2"></div>
+                <div class="row">
+                    {% for book in books %}
+                        <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
+                            <div class="card h-100 border-0">
+                                {% if book.image %}
+                                <a href="">
+                                    <img class="card-img-top img-fluid" src="{{ book.image.url }}" alt="{{ book.title }}">
+                                </a>
+                                {% else %}
+                                <a href="">
+                                    <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ book.title }}">
+                                </a>
+                                {% endif %}
+                                <div class="card-body pb-0">
+                                    <p class="my-1">{{ book.title }}</p>
+                                    <p class="my-1"><strong> by {{ book.author }}</strong></p>
+                                </div>
+                                <div class="card-footer bg-white pt-0 border-0 text-left">
+                                    <div class="row">
+                                        <div class="col">
+                                            <p class="lead mb-0 text-left font-weight-bold">${{ book.price }}</p>
+                                            {% if book.rating %}
+                                                <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ book.rating }} / 10</small>
+                                            {% else %}
+                                                <small class="text-muted">No Rating</small>
+                                            {% endif %}
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col">
+                                            <strong>Genres:</strong>
+                                            {% for genre in book.genre.all %}
+                                                <span class="badge badge-info">{{ genre.caption}}</span>
+                                            {% endfor %}
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        {% if forloop.counter|divisibleby:1 %}
+                            <div class="col-12 d-sm-none mb-5">
+                                <hr>
+                            </div>
+                        {% endif %}                        
+                        {% if forloop.counter|divisibleby:2 %}
+                            <div class="col-12 d-none d-sm-block d-md-block d-lg-none mb-5">
+                                <hr class="page-divider ">
+                            </div>
+                        {% endif %}
+                        {% if forloop.counter|divisibleby:3 %}
+                            <div class="col-12 d-none d-lg-block d-xl-none mb-5">
+                                <hr class="page-divider">
+                            </div>
+                        {% endif %}
+                        {% if forloop.counter|divisibleby:4 %}
+                            <div class="col-12 d-none d-xl-block mb-5">
+                                <hr class="page-divider">
+                            </div>
+                        {% endif %}
+                    {% endfor %}
+                </div>
             </div>
         </div>
     </div>
 {% endblock %}
-<!--We want to add some content to the page-->
-{% block content %}
-<!--Lets make a basic bootstrap grid-->
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                {{ books }}
-            </div>
-        </div>
-    </div>
-{% endblock %} 
