--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -24,28 +24,6 @@
                 <a href="" class="dropdown-item">All Books</a>
             </div>
         </li>
-
-        <li class="nav-item dropdown">
-            <a class="text-dark-blue font-weight-bold nav-link mr-5" href="#" id="homeware-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Homeware
-            </a>
-            <div class="dropdown-menu border-0" aria-labelledby="homeware-link">
-                <a href="" class="dropdown-item">Bed &amp; Bath</a>
-                <a href="" class="dropdown-item">Kitchen &amp; Dining</a>
-                <a href="" class="dropdown-item">All Homeware</a>
-            </div>
-        </li>
-
-        <li class="nav-item dropdown">
-            <a class=" text-dark-blue font-weight-bold nav-link" href="#" id="specials-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Special Offers
-            </a>
-            <div class="dropdown-menu border-0" aria-labelledby="specials-link">
-                <a href="" class="dropdown-item">New Arrivals</a>
-                <a href="" class="dropdown-item">Deals</a>
-                <a href="" class="dropdown-item">Clearance</a>
-                <a href="" class="dropdown-item">All Specials</a>
-            </div>
-        </li>
+        <!--Put more list items here if you need them -->
     </ul>
 </div>
