--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -21,7 +21,7 @@
                     <div class="browse-backdrop">
                         <h1 class = "display-4 logo-font text-cream">Browse our collection</h1>
                         <h4>
-                            <a href="#" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Shop Now</a>
+                            <a href="{% url "books" %}" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Shop Now</a>
                         </h4>
                     </div>
                     
