--- a/books/templates/books/book-details.html
+++ b/books/templates/books/book-details.html
@@ -38,7 +38,9 @@
                         <small class="text-muted">No Rating</small>
                     {% endif %}
                         <strong class="">Genre: </strong>
-                        <span class="badge badge-info">{{ book.genre}}</span>
+                        <a href="{% url "books" %}?category={{book.genre}}">
+                            <span class="badge badge-info">{{ book.genre}}</span>
+                        </a>
                     <hr class="page-divider">
                     <p class=" mt-3">{{ book.blurb }}</p>
                 </div>
@@ -46,3 +48,4 @@
         </div>
     </div>
 {% endblock %}
+
