--- a/books/templates/books/books.html
+++ b/books/templates/books/books.html
@@ -14,73 +14,134 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col text-center mt-3">
-                <h2 class="logo-font  text-orange">Books</h2>
+                <h2 class="logo-font  text-orange"> {% for category in current_categories %}{{ category }}{% endfor %} Books</h2>
                 <hr class="w-50 mb-2 page-divider">
             </div>
         </div>
-        <div class="row">
+        <div class="row m-4">
             <div class="product-container col-10 offset-1">
-                <div class="row mt-1 mb-2"></div>
-                <div class="row">
-                    {% for book in books %}
-                        <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
-                            <div class="card h-100 border-0">
-                                {% if book.image %}
-                                <a href="{% url "book-details" book.id %}">
-                                    <img class="card-img-top img-fluid" src="{{ book.image.url }}" alt="{{ book.title }}">
-                                </a>
-                                {% else %}
-                                <a href="{% url "book-details" book.id %}">
-                                    <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ book.title }}">
-                                </a>
-                                {% endif %}
-                                <div class="card-body pb-0">
-                                    <p class="my-1">{{ book.title }}</p>
-                                    <p class="my-1"><strong> by {{ book.author }}</strong></p>
-                                </div>
-                                <div class="card-footer bg-white pt-0 border-0 text-left">
-                                    <div class="row">
-                                        <div class="col">
-                                            <p class="lead mb-0 text-left font-weight-bold">${{ book.price }}</p>
-                                            {% if book.rating %}
-                                                <small class="text-muted"><i class=" text-orange fas fa-star mr-1"></i>{{ book.rating }} / 10</small>
-                                            {% else %}
-                                                <small class="text-muted">No Rating</small>
-                                            {% endif %}
-                                        </div>
+                <div class="row mt-1 mb-2">
+
+                    <div class="col-12 col-md-6 my-auto order-md-last d-flex justify-content-center justify-content-md-end">
+                        <div class="sort-select-wrapper w-50">
+                            <select id="sort-selector" class="custom-select custom-select-sm rounded-0 border border-{% if current_sorting != 'None_None' %}info{% else %}black{% endif %}">
+                                <option value="reset" {% if current_sorting == 'None_None' %}selected{% endif %}>Sort by...</option>
+                                <option value="price_asc" {% if current_sorting == 'price_asc' %}selected{% endif %}>Price (low to high)</option>
+                                <option value="price_desc" {% if current_sorting == 'price_desc' %}selected{% endif %}>Price (high to low)</option>
+                                <option value="rating_asc" {% if current_sorting == 'rating_asc' %}selected{% endif %}>Rating (low to high)</option>
+                                <option value="rating_desc" {% if current_sorting == 'rating_desc' %}selected{% endif %}>Rating (high to low)</option>
+                                <option value="title_asc" {% if current_sorting == 'title_asc' %}selected{% endif %}>Title (A-Z)</option>
+                                <option value="title_desc" {% if current_sorting == 'title_desc' %}selected{% endif %}>Title (Z-A)</option>
+                                <option value="genre_asc" {% if current_sorting == 'genre_asc' %}selected{% endif %}>Genre (A-Z)</option>
+                                <option value="genre_desc" {% if current_sorting == 'genre_desc' %}selected{% endif %}>Genre (Z-A)</option>
+                            </select>
+                        </div>
+                    </div>
+
+                    <div class="col-12 col-md-6 order-md-first">
+                        <p id="book-count" class="text-muted mt-3 text-center text-md-left">
+                            {% if search_term or current_categories or current_sorting != 'None_None' %}
+                                <span id="books-home-link" class="small"><a href="{% url 'books' %}">Books Home</a> | </span>
+                            {% endif %}
+                            {{ books|length }} Books{% if search_term %} found for <strong>"{{ search_term }}"</strong>{% endif %}
+                        </p>
+                    </div>
+
+                </div>
+            </div>
+            <div class="row">
+                {% for book in books %}
+                    <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
+                        <div class="card h-100 border-0">
+                            {% if book.image %}
+                            <a href="{% url "book-details" book.id %}">
+                                <img class="card-img-top img-fluid" src="{{ book.image.url }}" alt="{{ book.title }}">
+                            </a>
+                            {% else %}
+                            <a href="{% url "book-details" book.id %}">
+                                <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ book.title }}">
+                            </a>
+                            {% endif %}
+                            <div class="card-body pb-0">
+                                <p class="my-1">{{ book.title }}</p>
+                                <p class="my-1"><strong> by {{ book.author }}</strong></p>
+                            </div>
+                            <div class="card-footer bg-white pt-0 border-0 text-left">
+                                <div class="row">
+                                    <div class="col">
+                                        <p class="lead mb-0 text-left font-weight-bold">${{ book.price }}</p>
+                                        {% if book.rating %}
+                                            <small class="text-muted"><i class=" text-orange fas fa-star mr-1"></i>{{ book.rating }} / 10</small>
+                                        {% else %}
+                                            <small class="text-muted">No Rating</small>
+                                        {% endif %}
                                     </div>
-                                    <div class="row">
-                                        <div class="col">
-                                            <strong>Genre:</strong>
+                                </div>
+                                <div class="row">
+                                    <div class="col">
+                                        <strong>Genre:</strong>
+                                        <a href="{% url "books" %}?category={{book.genre}}">
                                             <span class="badge badge-info">{{ book.genre}}</span>
-                                        </div>
+                                        </a>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        {% if forloop.counter|divisibleby:1 %}
-                            <div class="col-12 d-sm-none mb-5">
-                                <hr>
-                            </div>
-                        {% endif %}                        
-                        {% if forloop.counter|divisibleby:2 %}
-                            <div class="col-12 d-none d-sm-block d-md-block d-lg-none mb-5">
-                                <hr class="page-divider ">
-                            </div>
-                        {% endif %}
-                        {% if forloop.counter|divisibleby:3 %}
-                            <div class="col-12 d-none d-lg-block d-xl-none mb-5">
-                                <hr class="page-divider">
-                            </div>
-                        {% endif %}
-                        {% if forloop.counter|divisibleby:4 %}
-                            <div class="col-12 d-none d-xl-block mb-5">
-                                <hr class="page-divider">
-                            </div>
-                        {% endif %}
-                    {% endfor %}
-                </div>
+                    </div>
+                    {% if forloop.counter|divisibleby:1 %}
+                        <div class="col-12 d-sm-none mb-5">
+                            <hr>
+                        </div>
+                    {% endif %}                        
+                    {% if forloop.counter|divisibleby:2 %}
+                        <div class="col-12 d-none d-sm-block d-md-block d-lg-none mb-5">
+                            <hr class="page-divider ">
+                        </div>
+                    {% endif %}
+                    {% if forloop.counter|divisibleby:3 %}
+                        <div class="col-12 d-none d-lg-block d-xl-none mb-5">
+                            <hr class="page-divider">
+                        </div>
+                    {% endif %}
+                    {% if forloop.counter|divisibleby:4 %}
+                        <div class="col-12 d-none d-xl-block mb-5">
+                            <hr class="page-divider">
+                        </div>
+                    {% endif %}
+                {% endfor %}
             </div>
         </div>
     </div>
+{% endblock %}
+
+{% block postloadjs %}
+    {{ block.super }}
+    <script type="text/javascript">
+		$('.btt-link').click(function(e) {
+			window.scrollTo(0,0)
+		})
+	</script>
+    
+    <script type="text/javascript">
+        $('#sort-selector').change(function() {
+            var selector = $(this);
+            var currentUrl = new URL(window.location);
+
+            var selectedVal = selector.val();
+            if(selectedVal != "reset"){
+                var sort = selectedVal.split("_")[0];
+                var direction = selectedVal.split("_")[1];
+
+                currentUrl.searchParams.set("sort", sort);
+                currentUrl.searchParams.set("direction", direction);
+
+                window.location.replace(currentUrl);
+            } else {
+                currentUrl.searchParams.delete("sort");
+                currentUrl.searchParams.delete("direction");
+
+                window.location.replace(currentUrl);
+            }
+        })
+    </script>
 {% endblock %}
